--- a/package.json
+++ b/package.json
@@ -8,22 +8,18 @@
     "start": "next start -p 5000"
   },
   "dependencies": {
-    "@mdx-js/mdx": "1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^11.0.1",
     "next": "^11.0.1",
-    "next-mdx-remote": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.2",
+    "react-syntax-highlighter": "^15.4.3",
     "remark-emoji": "^2.2.0",
+    "gray-matter": "^4.0.3",
     "remark-images": "^2.0.0"
   },
   "devDependencies": {
-    "@mdx-js/loader": "1.6.22",
-    "@types/mdx-js__react": "^1.5.4",
     "@types/react": "^17.0.14",
-    "gray-matter": "^4.0.3",
-    "prism-react-renderer": "^1.2.1",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "typescript": "^4.3.5"
   },
   "prettier": {
