--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "generateSiteMap": "ts-node --skip-project -T ./utils/sitemap.ts",
+    "build": "next build && npm run generateSiteMap",
     "export": "next export",
     "dev": "next -p 5000",
     "start": "next start -p 5000"
@@ -22,6 +23,7 @@
     "@types/react": "^17.0.15",
     "@types/react-syntax-highlighter": "^13.5.2",
     "remark-gfm": "^1.0.0",
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "prettier": {
