--- a/package.json
+++ b/package.json
@@ -6,25 +6,26 @@
     "generateSiteMap": "ts-node --skip-project -T ./utils/sitemap.ts",
     "build": "next build && npm run generateSiteMap",
     "export": "next export",
-    "dev": "next -p 5000",
-    "start": "next start -p 5000"
+    "dev": "next dev -p 5200",
+    "start": "next start -p 5200"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "next": "^11.1.2",
+    "next": "^12.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.0.1",
-    "react-syntax-highlighter": "^15.4.4",
-    "remark-emoji": "^3.0.1",
-    "remark-images": "^3.0.0"
+    "react-markdown": "^8.0.0",
+    "react-syntax-highlighter": "^15.4.5",
+    "remark-emoji": "^3.0.2",
+    "remark-images": "^3.1.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.24",
+    "@types/node": "^17.0.13",
+    "@types/react": "^17.0.38",
     "@types/react-syntax-highlighter": "^13.5.2",
-    "remark-gfm": "^2.0.0",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "remark-gfm": "^3.0.1",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   },
   "prettier": {
     "tabWidth": 2,
