--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build && npm run generateSiteMap",
     "export": "next export",
     "dev": "next dev -p 5200",
-    "start": "next start -p 5200"
+    "start": "next start -p 5200",
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
@@ -23,6 +24,8 @@
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
     "@types/react-syntax-highlighter": "^13.5.2",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.9",
     "remark-gfm": "^3.0.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
