fix: revert next (broken) upgrade

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-mdx",
+  "name": "uql-website",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,7 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
-    "next": "^12.1.5",
+    "next": "^12.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-markdown": "^8.0.2",
