--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uql-website",
+  "name": "nukak-website",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,22 +11,22 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
-    "next": "^12.2.2",
+    "next": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
-    "valtio": "^1.6.1"
+    "valtio": "^1.7.5"
   },
   "devDependencies": {
-    "@types/node": "^18.0.3",
-    "@types/react": "^18.0.15",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.3",
     "gray-matter": "^4.0.3",
     "remark-gfm": "^3.0.1",
-    "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "prettier": {
     "tabWidth": 2,
