--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "generateSiteMap": "ts-node --skip-project -T ./utils/sitemap.ts",
-    "build": "next build && npm run generateSiteMap",
+    "sitemap": "ts-node --skip-project -T ./utils/sitemap.ts",
+    "build": "next build && npm run sitemap",
     "export": "next export",
     "dev": "next dev -p 5200",
     "start": "next start -p 5200",
     "lint": "next lint --fix"
   },
   "dependencies": {
-    "next": "^13.0.3",
+    "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
-    "valtio": "^1.7.5"
+    "valtio": "^1.7.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
     "gray-matter": "^4.0.3",
     "remark-gfm": "^3.0.1",
     "ts-node": "^10.9.1",
