--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "gray-matter": "^4.0.3",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
