--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "valtio": "^1.13.2"
   },
   "devDependencies": {
-    "@types/node": "^22.2.0",
+    "@types/node": "^22.3.0",
     "@types/react": "^18.3.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
@@ -37,5 +37,5 @@
     "singleQuote": true,
     "printWidth": 120
   },
-  "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
+  "packageManager": "pnpm@9.7.1"
 }
