refactor: update website content and build configuration, remove unused assets, and add type checking.

--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.6",
     "@astrojs/react": "^4.4.2",
     "@astrojs/starlight": "^0.37.1",
     "@astrojs/vercel": "^9.0.2",
     "astro": "^5.16.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/react": "^19.2.7",
