--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "sharp": "^0.34.5",
+    "starlight-llms-txt": "^0.6.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
