--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "packageManager": "bun@1.3.5",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -20,7 +21,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "sharp": "^0.34.5",
-    "starlight-llms-txt": "^0.6.0",
+    "starlight-llms-txt": "^0.7.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
