--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "bun": ">=1.3.5"
+  },
   "packageManager": "bun@1.3.5",
   "scripts": {
     "dev": "astro dev",
